--- a/src/scss/layout/_direction.scss
+++ b/src/scss/layout/_direction.scss
@@ -345,8 +345,20 @@
             display: none;
         }
     }
-    &__img{
+    &__swiper{
         position: relative;
+        overflow: hidden;
+        max-width: 623px;
+        &::before{
+            content: '';
+            position: absolute;
+            right: -43px;
+            height: 100%;
+            background: linear-gradient(269.03deg, #EEE6F5 23.07%, rgba(255, 255, 255, 0) 98.9%);
+            width: 230px;
+            z-index: 1;
+            pointer-events: none;
+        }
         @include media(1375){
             max-width: 455px;
             width: 100%;
@@ -358,18 +370,34 @@
         @include media(767){
             display: none;
         }
-        // &::before{
-        //     content: '';
-        //     position: absolute;
-        //     right: -43px;
-        //     height: 100%;
-        //     background: linear-gradient(269.03deg, #EEE6F5 23.07%, rgba(255, 255, 255, 0) 98.9%);
-        //     width: 230px;
-        //     @include media(1024){
-        //         right: -1px;
-        //     }
-        // }
+        .direction__img{
+            max-width: 511px;
+            @include media(1375){
+                max-width: 455px;
+            }
+            @include media(1024){
+                max-width: 380px;
+            }
+        }
+    }
+    &__img{
+        position: relative;
+        max-width: 623px;
+        @include media(1375){
+            max-width: 455px;
+            width: 100%;
+        }
+        @include media(1024){
+            max-width: 397px;
+            min-width: 397px;
+        }
+        @include media(767){
+            display: none;
+        }
         img{
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
             @include media(1375){
                 width: 100%;
             }
