--- a/src/scss/layout/_lessons.scss
+++ b/src/scss/layout/_lessons.scss
@@ -259,6 +259,7 @@
             width: 242px;
             right: 0;
             z-index: 1;
+            pointer-events: none;
             background: linear-gradient(269.03deg, #BFFDF2 23.07%, rgba(255, 255, 255, 0) 98.9%);
             @include media(1024){
                 width: 130px;
