--- a/src/components/carousel.pug
+++ b/src/components/carousel.pug
@@ -127,7 +127,7 @@ mixin carousel-3()
     .carousel.last
         .carousel__container.container
             .carousel__inner
-                p.carousel__title Курсы <span>по дизайну</span> для детей и подростков
+                p.carousel__title Курсы <span class="min">по дизайну</span> для детей и подростков
                 .carousel__content 
                     .swiper.carousel__swiper
                         .swiper-wrapper.carousel__wrapper 
