--- a/src/components/direction.pug
+++ b/src/components/direction.pug
@@ -78,7 +78,7 @@ mixin direction()
                                                 img(src="@img/3dmodelling-course.gif", alt="" draggable="false")
                         .direction__row#second
                             p.direction__text Программирование и анализ данных
-                            .direction__items.enable-sm
+                            .direction__items.enable-md
                                 .direction__content 
                                     a(href="course.html").direction__item
                                         .direction__item-left 
@@ -140,7 +140,7 @@ mixin direction()
                                     img(src="@img/python-course.gif", alt="" draggable="false")
                         .direction__row#third 
                             p.direction__text от 12 лет 
-                            .direction__items.last.enable-sm
+                            .direction__items.last.enable-md
                                 .direction__content 
                                     a(href="course.html").direction__item
                                         .direction__item-left 
