--- a/src/components/lessons.pug
+++ b/src/components/lessons.pug
@@ -9,6 +9,8 @@ mixin lessons()
                             .lessons__item 
                                 .lessons__img 
                                     img(src="@img/lessons-img-1.png", alt="" draggable="false")
+                                .lessons__img.xxl
+                                    img(src="@img/lessons-img-1-xxl.png", alt="" draggable="false")
                                 .lessons__right 
                                     p.lessons__p Усаживаемся поудобнее, включаем камеру и приветствуем друг друга. 
                                     .lessons__arrow 
@@ -20,9 +22,13 @@ mixin lessons()
                                         img(src="@img/lessons-arrow-2.png", alt="" draggable="false")
                                 .lessons__img 
                                     img(src="@img/lessons-img-2.png", alt="" draggable="false")
+                                .lessons__img.xxl
+                                    img(src="@img/lessons-img-2-xxl.png", alt="" draggable="false")
                             .lessons__item 
                                 .lessons__img 
                                     img(src="@img/lessons-img-3.png", alt="" draggable="false")
+                                .lessons__img.xxl
+                                    img(src="@img/lessons-img-3-xxl.png", alt="" draggable="false")
                                 .lessons__right 
                                     p.lessons__p Приступаем к практической части и воплощаем свои идеи!
                                     .lessons__arrow 
