--- a/src/index.pug
+++ b/src/index.pug
@@ -45,7 +45,7 @@ html(lang="en")
                                                 p.intro__p средняя зарплата IT-специалиста #[br] за 2-е пол. 2022 года
                                             .intro__item 
                                                 p.intro__p на #[span 4-5 ] %
-                                                p.intro__p ежегордно будет расти российский рынок IT в течение следующих лет
+                                                p.intro__p ежегодно будет расти российский рынок IT в течение следующих лет
                                 a(href="courses.html").intro__btn Смотреть все курсы по программированию 
                 include components/direction 
                 +direction
