--- a/src/components/sign.pug
+++ b/src/components/sign.pug
@@ -22,3 +22,5 @@ mixin sign()
                 .sign__span Оставляя заявку, вы принимаете оферту, условия договора на оказание услуг и политики обработки пресональных данных.
             .sign__img 
                 img(src="@img/rocket.svg", alt="" draggable="false")
+            .sign__img.sm
+                img(src="@img/rocket-sm.png", alt="" draggable="false")
