--- a/src/scss/layout/_lessons.scss
+++ b/src/scss/layout/_lessons.scss
@@ -18,7 +18,7 @@
     @include media(575){
         padding: 30px 22px 25px;
     }
-    @include media(375){
+    @include media(374){
         padding-right: 8px;
         padding-left: 8px;
     }
@@ -86,9 +86,20 @@
     &__img{
         min-width: 685px;
         width: 685px;
+        line-height: 0;
+        picture{
+            line-height: 0;
+        }
+        &.xxl{
+            display: none;
+            @include media(1375){
+                display: block;
+            }
+        }
         @include media(1375){
             min-width: 482px;
             width: 482px;
+            display: none;
         }
         @include media(1024){
             min-width: 350px;
@@ -106,8 +117,14 @@
             min-width: 195px;
             width: 195px; 
         }
+        @include media(374){
+            min-width: 140px;
+            width: 140px; 
+        }
         img{
+            min-width: 100%;
             width: 100%;
+            line-height: 0;
         }
     }
     &__p{
@@ -151,14 +168,14 @@
         @include media(767){
             max-width: 40px;
         }
-        @include media(375){
+        @include media(424){
             height: 32px;
         }
         img{
             @include media(1375){
                 width: 100%;
             }
-            @include media(375){
+            @include media(424){
                 height: 100%;
             }
         }
