--- a/src/scss/themes/_theme.scss
+++ b/src/scss/themes/_theme.scss
@@ -417,7 +417,12 @@ a{
             border-radius: 30px;
         }
         &:hover{
-            box-shadow: -92px 114px 58px rgba(0, 0, 0, 0.01), -52px 64px 49px rgba(0, 0, 0, 0.05), -23px 28px 37px rgba(0, 0, 0, 0.09), -6px 7px 20px rgba(0, 0, 0, 0.1), 0px 0px 0px rgba(0, 0, 0, 0.1);
+            box-shadow: 
+            // -46px 57px 15px rgba(0, 0, 0, 0.01), 
+            // -26px 32px 12.5px rgba(0, 0, 0, 0.05),
+            -12px 14px 8px rgba(0, 0, 0, 0.09), 
+            -3px 3px 5px rgba(0, 0, 0, 0.1), 
+            0px 0px 0px rgba(0, 0, 0, 0.1);
         }
         &-title{
             font-weight: 600;
@@ -495,7 +500,7 @@ a{
             padding: 30px 25px;
             gap: 20px;
         }
-        @include media(375){
+        @include media(374){
             flex-direction: column;
             padding: 20px 22px;
         }
@@ -627,7 +632,7 @@ a{
         @include media(424){
             padding: 30px 25px;
         }
-        @include media(375){
+        @include media(374){
             padding: 20px 22px;
         }
     }
@@ -655,7 +660,7 @@ a{
         @include media(424){
             top: 30px;
         }
-        @include media(375){
+        @include media(374){
             top: 20px;
             right: 22px;
         }
@@ -739,7 +744,7 @@ a{
         @include media(424){
             padding: 30px 25px;
         }
-        @include media(375){
+        @include media(374){
             padding: 20px 22px;
         }
     }
@@ -841,6 +846,11 @@ a{
             position: relative;
             isolation: isolate;
             display: inline-block;
+            &.min{
+                &::before{
+                    background: url(../img/text-overflow-min.svg) center/cover no-repeat;
+                }
+            }
             &::before{
                 content: "";
                 position: absolute;
@@ -855,18 +865,22 @@ a{
                 right: 0;
                 bottom: -8px;
                 z-index: -1;
+                @include media(1375){
+                    bottom: -12px;
+                }
                 @include media(1024){
+                    bottom: 3px;
                     width: 100%;
-                    height: 42px;
+                    height: 16px;
                 }
                 @include media(767){
                     width: 100%;
-                    height: 30px;
-                    bottom: -5px;   
+                    height: 13px;
+                    bottom: 3px;  
                 }
                 @include media(575){
-                    height: 34px;
-                    bottom: -10px;
+                    height: 11px;
+                    bottom: 3px;
                 }
             }
         }
