--- a/src/components/direction.pug
+++ b/src/components/direction.pug
@@ -20,7 +20,7 @@ mixin direction()
                                                 p.direction__p от 600 руб./занятие 
                                                 p.direction__p от 10 лет 
                                         .direction__item-img 
-                                            img(src="@img/direction-img-1.svg", alt="") 
+                                            img(src="@img/roblox.png", alt="") 
                                     a(href="course.html").direction__item 
                                         .direction__item-left  
                                             h2.direction__subtitle Создание игр и мультфильмов в Scratch 
@@ -28,7 +28,7 @@ mixin direction()
                                                 p.direction__p от 900 руб./занятие 
                                                 p.direction__p от 5 лет 
                                         .direction__item-img 
-                                            img(src="@img/direction-img-2.svg", alt="") 
+                                            img(src="@img/scratch.png", alt="") 
                                     a(href="course.html").direction__item 
                                         .direction__item-left 
                                             h2.direction__subtitle Создание игр #[br] в Unity 
@@ -36,7 +36,7 @@ mixin direction()
                                                 p.direction__p от 600 руб./занятие 
                                                 p.direction__p от 14 лет 
                                         .direction__item-img 
-                                            img(src="@img/direction-img-3.svg", alt="") 
+                                            img(src="@img/unity.png", alt="") 
                             .slider.direction__slider 
                                 .swiper.direction__swiper 
                                     .swiper-wrapper.direction__swiper-wrapper 
@@ -48,7 +48,7 @@ mixin direction()
                                                         p.direction__p от 900 руб./занятие
                                                         p.direction__p от 5 лет
                                                 .direction__item-img 
-                                                    img(src="@img/direction-img-2.svg", alt="")
+                                                    img(src="@img/scratch.png", alt="")
                                         .swiper-slide.direction__swiper-slide 
                                             a(href="course.html").direction__item
                                                 .direction__item-left 
@@ -57,7 +57,7 @@ mixin direction()
                                                         p.direction__p от 600 руб./занятие
                                                         p.direction__p от 10 лет
                                                 .direction__item-img 
-                                                    img(src="@img/direction-img-1.svg", alt="")
+                                                    img(src="@img/roblox.png", alt="")
                                         .swiper-slide.direction__swiper-slide 
                                             a(href="course.html").direction__item
                                                 .direction__item-left 
@@ -66,7 +66,7 @@ mixin direction()
                                                         p.direction__p от 600 руб./занятие
                                                         p.direction__p от 14 лет
                                                 .direction__item-img 
-                                                    img(src="@img/direction-img-3.svg", alt="")
+                                                    img(src="@img/unity.png", alt="")
                             .direction__right 
                                 p.direction__desc Какой ребенок не любит компьютерные игры? Мы предлагаем сделать этот процесс полезнее -- создавать и играть в свои игры. Увлекательно и точно понравится каждому!
                                 .direction__swiper
@@ -75,7 +75,7 @@ mixin direction()
                                             .direction__img.swiper-slide.gif
                                                 img(src="@img/roblox-course.gif", alt="" draggable="false")
                                             .direction__img.swiper-slide.gif
-                                                img(src="@img/3dmodelling-course.gif", alt="" draggable="false")
+                                                img(src="@img/scratch-course.gif", alt="" draggable="false")
                         .direction__row#second
                             p.direction__text Программирование и анализ данных
                             .direction__items.enable-md
@@ -87,7 +87,7 @@ mixin direction()
                                                 p.direction__p от 600 руб./занятие
                                                 p.direction__p от 12 лет
                                         .direction__item-img 
-                                            img(src="@img/direction-img-5.svg", alt="") 
+                                            img(src="@img/python.png", alt="") 
                                     a(href="course.html").direction__item
                                         .direction__item-left 
                                             h2.direction__subtitle Создание сайтов и Web-Design
@@ -95,7 +95,7 @@ mixin direction()
                                                 p.direction__p от 900 руб./занятие
                                                 p.direction__p от 14 лет
                                         .direction__item-img  
-                                            img(src="@img/direction-img-6.svg", alt="")
+                                            img(src="@img/json.png", alt="")
                                     a(href="course.html").direction__item
                                         .direction__item-left 
                                             h2.direction__subtitle Разработка мобильных игр на Android
@@ -103,7 +103,7 @@ mixin direction()
                                                 p.direction__p от 600 руб./занятие
                                                 p.direction__p от 12 лет
                                         .direction__item-img 
-                                            img(src="@img/direction-img-7.svg", alt="")
+                                            img(src="@img/android.png", alt="")
                             .slider.direction__slider 
                                 .swiper.direction__swiper 
                                     .swiper-wrapper.direction__swiper-wrapper 
@@ -115,7 +115,7 @@ mixin direction()
                                                         p.direction__p от 600 руб./занятие
                                                         p.direction__p от 12 лет
                                                 .direction__item-img 
-                                                    img(src="@img/direction-img-5.svg", alt="")
+                                                    img(src="@img/python.png", alt="")
                                         .swiper-slide.direction__swiper-slide 
                                             a(href="course.html").direction__item
                                                 .direction__item-left 
@@ -124,7 +124,7 @@ mixin direction()
                                                         p.direction__p от 900 руб./занятие
                                                         p.direction__p от 14 лет
                                                 .direction__item-img 
-                                                    img(src="@img/direction-img-6.svg", alt="")
+                                                    img(src="@img/json.png", alt="")
                                         .swiper-slide.direction__swiper-slide 
                                             a(href="course.html").direction__item
                                                 .direction__item-left 
@@ -133,13 +133,13 @@ mixin direction()
                                                         p.direction__p от 600 руб./занятие
                                                         p.direction__p от 12 лет
                                                 .direction__item-img 
-                                                    img(src="@img/direction-img-7.svg", alt="")
+                                                    img(src="@img/android.png", alt="")
                             .direction__right 
                                 p.direction__desc Даже самый простой написанный код — мощная умственная нагрузка! Как и в математике, в основе программирования лежат логические операции. Однако программирование более практично:  выполнив условие, можно написать программу, которая решит реальную человеческую проблему.
                                 .direction__img.gif
                                     img(src="@img/python-course.gif", alt="" draggable="false")
                         .direction__row#third 
-                            p.direction__text от 12 лет 
+                            p.direction__text Дизайн
                             .direction__items.last.enable-md
                                 .direction__content 
                                     a(href="course.html").direction__item
@@ -149,7 +149,15 @@ mixin direction()
                                                 p.direction__p от 600 руб./занятие
                                                 p.direction__p от 12 лет
                                         .direction__item-img 
-                                            img(src="@img/direction-img-8.svg", alt="")
+                                            img(src="@img/3d-modelling.png", alt="")
+                                    a(href="course.html").direction__item
+                                        .direction__item-left 
+                                            h2.direction__subtitle Создание сайтов и Web-Design
+                                            .direction__info    
+                                                p.direction__p от 600 руб./занятие
+                                                p.direction__p от 13 лет
+                                        .direction__item-img 
+                                            img(src="@img/json.svg", alt="")
                             .slider.direction__slider 
                                 .swiper.direction__swiper 
                                     .swiper-wrapper.direction__swiper-wrapper 
@@ -161,7 +169,7 @@ mixin direction()
                                                         p.direction__p от 600 руб./занятие
                                                         p.direction__p от 12 лет
                                                 .direction__item-img 
-                                                    img(src="@img/direction-img-8.svg", alt="")
+                                                    img(src="@img/3d-modelling.png", alt="") 
                             .direction__right 
                                 p.direction__desc Наши курсы по дизайну для детей — отличная возможность развить визуальное, пространственное мышление и раскрыть творческое начало. При этом совсем не обязательно быть художником!
                                 .direction__img.gif
