--- a/src/components/direction.pug
+++ b/src/components/direction.pug
@@ -17,7 +17,7 @@ mixin direction()
                                         .direction__item-left 
                                             h2.direction__subtitle Создание игр в Roblox Studio 
                                             .direction__info    
-                                                p.direction__p от 600 руб./занятие 
+                                                p.direction__p от 600 руб./занятие
                                                 p.direction__p от 10 лет 
                                         .direction__item-img 
                                             img(src="@img/roblox.png", alt="") 
@@ -25,7 +25,7 @@ mixin direction()
                                         .direction__item-left  
                                             h2.direction__subtitle Создание игр и мультфильмов в Scratch 
                                             .direction__info    
-                                                p.direction__p от 900 руб./занятие 
+                                                p.direction__p от 900 руб./занятие
                                                 p.direction__p от 5 лет 
                                         .direction__item-img 
                                             img(src="@img/scratch.png", alt="") 
@@ -92,8 +92,8 @@ mixin direction()
                                         .direction__item-left 
                                             h2.direction__subtitle Создание сайтов и Web-Design
                                             .direction__info    
-                                                p.direction__p от 900 руб./занятие
-                                                p.direction__p от 14 лет
+                                                p.direction__p от 600 руб./занятие
+                                                p.direction__p от 13 лет
                                         .direction__item-img  
                                             img(src="@img/json.png", alt="")
                                     a(href="course.html").direction__item
@@ -144,7 +144,7 @@ mixin direction()
                                 .direction__content 
                                     a(href="course.html").direction__item
                                         .direction__item-left 
-                                            h2.direction__subtitle 3D-моделирование
+                                            h2.direction__subtitle 3D-моделирование в Blender
                                             .direction__info    
                                                 p.direction__p от 600 руб./занятие
                                                 p.direction__p от 12 лет
@@ -187,7 +187,7 @@ mixin direction()
                                     .practice__txts.disable-md 
                                         p.practice__txt Онлайн-уроки в Zoom по 1 часу с индивидуальным расписанием 
                                         p.practice__txt Полное сопровождение ребенка в процессе обучения
-                                        p.practice__txt Полное сопровождение ребенка в процессе обучения
+                                        p.practice__txt Ответы на любые вопросы в совместом чате
                                     .practice__space
                                     a(href="#form").practice__button.open-popup Отправить заявку
                                 .practice__txts.enable-md 
