--- a/src/components/footer.pug
+++ b/src/components/footer.pug
@@ -10,13 +10,13 @@ mixin footer()
                     img(src="@img/logo-sm.svg", alt="Code it online school" draggable="false")
                 ul.footer__list 
                     li.footer__li 
-                        a(href="#!").footer__link О школе 
+                        a(href="index.html").footer__link О школе 
                     li.footer__li 
-                        a(href="#!").footer__link Кто мы 
+                        a(href="about.html").footer__link Кто мы 
                     li.footer__li 
-                        a(href="#!").footer__link Все курсы 
+                        a(href="courses.html").footer__link Все курсы 
                     li.footer__li 
-                        a(href="#!").footer__link Контакты 
+                        a(href="contacts.html").footer__link Контакты 
                 form(action="#").footer__form.form 
                     label(for="footer-form-email").footer__form-label Оставайтесь в курсе событий!
                     .footer__form-content 
