--- a/src/components/lessons.pug
+++ b/src/components/lessons.pug
@@ -33,7 +33,7 @@ mixin lessons()
                                     p.lessons__p Приступаем к практической части и воплощаем свои идеи!
                                     .lessons__arrow 
                                         img(src="@img/lessons-arrow-3.png", alt="" draggable="false")
-                .learn
+                .learn 
                     .learn__body 
                         h2.learn__title Вот, что научится делать ваш ребенок
                         .slider.learn__slider 
@@ -45,7 +45,7 @@ mixin lessons()
                                         p.learn__p Полноценные игровые миры в Roblox Studio
                                     .swiper-slide.learn__swiper-slide 
                                         .learn__img.gif 
-                                            img(src="@img/3dmodelling-course.gif", alt="" draggable="false")
+                                            img(src="@img/scratch-course.gif", alt="" draggable="false")
                                         p.learn__p Сюжетные игры и мультфильмы для самых маленьких в Scratch
                                     .swiper-slide.learn__swiper-slide 
                                         .learn__img.gif 
